--- a/atom/simple@.toml
+++ b/atom/simple@.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 [fetch.pkgs]
 name = "nixpkgs"
 import = true
-args = [{}]
+args = [{ localSystem = "x86_64-linux" }]
 
 [core]
 features = ["std"]
