--- a/atom/simple@.toml
+++ b/atom/simple@.toml
@@ -2,6 +2,9 @@
 id = "simple"
 version = "0.1.0"
 
+[local.local-lib]
+path = "local-lib@.toml"
+
 [fetch.nixpkgs]
 name = "nixpkgs"
 import = true
@@ -16,11 +19,8 @@ name = "nixpkgs"
 subdir = "lib"
 import = true
 
-# TODO find out if this is necessary
-[core]
-features = ["std"]
-[std]
-features = ["lib"]
+[features]
+default = ["system"]
 
 [backend.nix]
 # default when `eka` cli is ready
