--- a/atom/local-lib@.toml
+++ b/atom/local-lib@.toml
@@ -1,3 +1,14 @@
 [atom]
 id = "local-lib"
 version = "0.1.0"
+
+[std]
+features = ["lib"]
+
+[fetch.lib]
+name = "nixpkgs"
+subdir = "lib"
+import = true
+
+[backend.nix]
+fetcher = "npins"
