--- a/flake-atom/flake-atom@.toml
+++ b/flake-atom/flake-atom@.toml
@@ -2,12 +2,10 @@
 id = "flake-atom"
 version = "0.1.0"
 src = "src"
+system = true
 
 [fetch.nixpkgs-atom]
 overrides = ["nixpkgs"]
-
-[features]
-default = ["system"]
 
 [backend.nix]
 fetcher = "flake-lock"
